# P4-AppComp-Project

./: LICENSE  README.md  pyproject.toml
P4-AppComp-Project/: __init__.py  periodic.py
src/ACPP_Bunjy/: __init__.py  double_number.py  periodic.py  polynomial.py  straight_line.py  week3functions.py
